--- a/src/sass/_chroma_base.scss
+++ b/src/sass/_chroma_base.scss
@@ -1,7 +1,6 @@
 @mixin chroma_base {
   .chroma {
     color: var(--code-font-color);
-    margin: 1rem 0;
   }
   .chroma code {
     background-color: var(--code-background);
@@ -45,7 +44,29 @@
     > pre.chroma code {
       padding: 1rem;
       width: 100%;
-      overflow: auto;
+      overflow-x: auto;
     }
+  }
+
+  /* LineTable */
+  .chroma .lntable {
+    border-spacing: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    width: 100%;
+    display: block;
+  }
+  .chroma .lntable td:first-child code {
+    background-color: var(--code-accent-color-lite);
+    border-right: $border-1 solid var(--code-accent-color);
+    padding: 0.5em 0;
+  }
+  .chroma .lntable td code {
+    padding: 0.5em 0;
+  }
+  .chroma .lntable td:nth-child(2) {
+    width: 100%;
+    margin-left: 2em;
   }
 }
