--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -60,6 +60,10 @@
     display: none;
   }
 
+  .flex-mobile-column {
+    flex-direction: column;
+  }
+
   .gdoc-footer {
     &__item--row {
       width: 100%;
